enum-ptr-tests/tests/fail/field_num.stderr
error: EnumPtr only supports single field
 --> tests/fail/field_num.rs:9:5
  |
9 |     B(&'b i32, *const i32),
  |     ^

error: EnumPtr only supports single field
  --> tests/fail/field_num.rs:16:5
   |
16 |     B(),
   |     ^
